Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20060

Failing assertion: srv_log_file_size <= 512ULL << 30 while preparing backup

    XMLWordPrintable

Details

    Description

      When too much redo log is generated during backup:

      ...
      [00] 2019-07-04 10:05:31 Redo log (from LSN 369453697919029 to 370244323770496) was copied.
      [00] 2019-07-04 10:05:31 completed OK!
      

      mariabackup --prepare stage is terminated with the assertion failure:

      [00] 2019-07-05 16:28:18 mariabackup: Using 34359738368 bytes for buffer pool (set by --use-memory parameter)
      2019-07-05 16:28:18 139959018460992 [Note] InnoDB: Mutexes and rw_locks use GCC atomic builtins
      2019-07-05 16:28:18 139959018460992 [Note] InnoDB: Uses event mutexes
      2019-07-05 16:28:18 139959018460992 [Note] InnoDB: Compressed tables use zlib 1.2.11
      2019-07-05 16:28:18 139959018460992 [Note] InnoDB: Using Linux native AIO
      2019-07-05 16:28:18 139959018460992 [Note] InnoDB: Number of pools: 1
      2019-07-05 16:28:18 139959018460992 [Note] InnoDB: Using SSE2 crc32 instructions
      2019-07-05 16:28:18 139959018460992 [Note] InnoDB: Initializing buffer pool, total size = 32G, instances = 1, chunk size = 32G
      2019-07-05 16:28:19 139959018460992 [Note] InnoDB: Completed initialization of buffer pool
      2019-07-05 16:28:19 139922236876544 [Note] InnoDB: page_cleaner coordinator priority: -20
      2019-07-05 16:28:19 0x7f4abf941740  InnoDB: Assertion failure in file /home/buildbot/buildbot/build/storage/innobase/srv/srv0start.cc line 2053
      InnoDB: Failing assertion: srv_log_file_size <= 512ULL << 30
      ...
      

      Note the total redo log size during backup is 736G+:

      MariaDB [(none)]> select abs(369453697919029 - 370244323770496)/(1024*1024*1024) as redo_log_size;
      +---------------+
      | redo_log_size |
      +---------------+
      |      736.3277 |
      +---------------+
      1 row in set (0.018 sec)
      

      It seems InnoDB code used by mariabackup is not ready to process logs larger than 512G.

      Attachments

        Issue Links

          Activity

            People

              vlad.lesin Vladislav Lesin (Inactive)
              valerii Valerii Kravchuk
              Votes:
              1 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 12d 1h 40m
                  12d 1h 40m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.